# BroodOS

./: .gitignore  CMakeLists.txt  README.md  appinfo.json
cmake/: AresPackage.cmake
scripts/: build-webos.sh
src/: main.cpp  pixel_font.cpp  pixel_font.hpp  storage_scan.cpp  storage_scan.hpp
tests/: storage_scan_test.cpp
